--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "compress": "^0.99.0",
     "compression": "1.7.4",
     "cors": "2.8.5",
     "dotenv": "7.0.0",
